reworking server/client handling
